# visualizacion_datos

./: Dockerfile  LICENSE  docker-compose.yml  pyproject.toml
.github/workflows/: build.yaml
dashboard/: Covid.ipynb  CovidComunas.ipynb  CovidComunasLine.ipynb  MigrantesChile (2005-2016).xlsx  Sintomas.ipynb  TotalConf_Fallecidos_Comunas.ipynb  TotalRegiones.xlsx  app.py  barras.py  card_kpi.ipynb  data.py  demoMapa.ipynb  fallecidos.ipynb  heatmap.py  line.py  mapa.py  piechart.py  scatter.py  utils.py  vacunas.ipynb  wordcloudd.py
